--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <div class="site_wrapper">
 
-  <a class="link anim-zoom" href="https://getxtend.com">
+  <div class="link" href="https://getxtend.com">
     <img class="media" src="img.svg"/>
-  </a>
+    <a class="hotspot"></a>
+  </div>
 
 </div>
+
+<script src="theme.js"></script>
 
 </body>
 
