--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <div class="site_wrapper">
 
-  <div class="link" href="https://getxtend.com">
+  <div class="link">
     <img class="media" src="img.svg"/>
-    <a class="hotspot"></a>
+    <a href="https://getxtend.com" class="hotspot"></a>
   </div>
 
 </div>
