--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Minimit — Riccardo Caroli</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="icon" href="favicon.png" id="favicon">
+  <link rel="icon" href="favicon-dark.png" id="favicon-dark">
+
   <link rel="stylesheet" href="theme.css">
 
 </head>
